<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/blur"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="205dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.40117416" />

    <ImageView
        app:srcCompat="@drawable/up_ban"
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:elevation="2dp"
        android:background="@color/color_white"
        android:padding="4dp"
        android:scaleType="fitXY"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/text_profile_name"
        android:textStyle="bold"
        android:textColor="@color/color_white"/>

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="115dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="115dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/text_profile_japname"
        android:textColor="@color/color_white"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/threeSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:weightSum="0.9">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:background="@color/color_profile_three_up">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bust"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_bust"
                android:gravity="center"
                android:textSize="@dimen/text_three_num"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:background="@color/color_profile_three_down">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waist"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_waist"
                android:gravity="center"
                android:textSize="@dimen/text_three_num"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:background="@color/color_profile_three_up">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hip"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_hip"
                android:gravity="center"
                android:textSize="@dimen/text_three_num"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:id="@+id/infoScoll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threeSize"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        android:layout_height="166dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:gravity="center|left"
                    android:textSize="@dimen/text_profile_1"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/text_profile_padding"
                    android:paddingBottom="@dimen/base_8dp"
                    android:paddingLeft="@dimen/text_profile_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_birthday"
                    android:text=""
                    android:gravity="center|left"
                    android:textSize="@dimen/text_profile_2"
                    android:paddingLeft="@dimen/text_profile_padding"
                    android:paddingBottom="@dimen/text_profile_padding"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#E0E0E0"
                    android:layout_marginLeft="@dimen/text_profile_padding"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:gravity="center|left"
                    android:textSize="@dimen/text_profile_1"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/text_profile_padding"
                    android:paddingBottom="@dimen/base_8dp"
                    android:paddingLeft="@dimen/text_profile_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_height"
                    android:text=""
                    android:gravity="center|left"
                    android:textSize="@dimen/text_profile_2"
                    android:paddingLeft="@dimen/text_profile_padding"
                    android:paddingBottom="@dimen/text_profile_padding"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#E0E0E0"
                    android:layout_marginLeft="@dimen/text_profile_padding"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/link"
                    android:gravity="center|left"
                    android:textSize="@dimen/text_profile_1"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/text_profile_padding"
                    android:paddingBottom="@dimen/base_8dp"
                    android:paddingLeft="@dimen/text_profile_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/link_desc"
                    android:gravity="center|left"
                    android:textSize="@dimen/text_profile_2"
                    android:paddingLeft="@dimen/text_profile_padding"
                    android:paddingBottom="@dimen/text_profile_padding"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#E0E0E0"
                    android:layout_marginLeft="@dimen/text_profile_padding"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>